Fixed Navigation/LogoHero to not be cropped at the end of the animation.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -211,7 +211,7 @@ h2 {
 #stuff-i-done,
 #case-studies,
 #contact {
-	scroll-margin-top: 150px;
+	scroll-margin-top: 7.5vh;
 	/* adjust to match nav height */
 }
 
